infra-eks-prod-pci-2-helm-main/helm_values/istio/istio-gateway-accesslog-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: gateway-access-log
  namespace: istio-ingress
spec:
  workloadSelector:
    labels:
      gateway.networking.k8s.io/gateway-name: istio-gateway

  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: GATEWAY
        listener:
          portNumber: 443
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    text_format_source:
                      inline_string: |
                        {
                          "start_time": "%START_TIME%",
                          "correlationID": "%RESP(CORRELATIONID)%",
                          "req_method": "%REQ(:METHOD)%",
                          "x_envoy_original_path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                          "protocol": "%PROTOCOL%",
                          "response_code": "%RESPONSE_CODE%",
                          "response_flags": "%RESPONSE_FLAGS%",
                          "bytes_received": "%BYTES_RECEIVED%",
                          "bytes_sent": "%BYTES_SENT%",
                          "duration": "%DURATION%",
                          "upstream_service_time": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                          "x_forwarded_for": "%REQ(X-FORWARDED-FOR)%",
                          "user_agent": "%REQ(USER-AGENT)%",
                          "x_request_id": "%REQ(X-REQUEST-ID)%",
                          "authority": "%REQ(:AUTHORITY)%",
                          "upstream_host": "%UPSTREAM_HOST%",
                          "upstream_cluster": "%UPSTREAM_CLUSTER%",
                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%",
                          "downstream_local_address": "%DOWNSTREAM_LOCAL_ADDRESS%",
                          "downstream_remote_address": "%DOWNSTREAM_REMOTE_ADDRESS%",
                          "resp_x_foo_fault_flag": "%RESP(X-FOO-FAULT-FLAG)%"
                        }
